# birdtray

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/problem-matchers/: compiler.json  linguist.json  translations.json
.github/scripts/: checkTranslation.py
.github/workflows/: codeql-analysis.yml  main.yml  translations.yml
cmake/: FindSQLite3.cmake
contrib/: README.gen_birdtray_accounts.txt  gen_birdtray_accounts
contrib/anonymizeMork/: README.md  anonymizeMork.py
contrib/gen_birdtray_accounts/: gen_birdtray_accounts
contrib/rpm/: birdtray.spec
contrib/unreadhook/: examplehook.sh
installer/: Log.nsh  StrUtils.nsh  Utils.nsh  buildInstaller.bat  buildInstaller.py  getExeArch.nsi  installer.nsi  makeInstallerTranslations.nsi  makeTranslationsList.nsi  makeUninstallList.nsi
installer/config/: config.xml.template
installer/nsisExtras/Include/: NsisMultiUser.nsh
src/: .qmake.stash  Makefile  accounttreemodel.cpp  accounttreemodel.h  autoupdater.cpp  autoupdater.h  birdtray.pro  birdtrayapp.cpp  birdtrayapp.h  birdtrayeventfilter.cpp  birdtrayeventfilter.h  colorbutton.cpp  colorbutton.h  databaseaccounts.cpp  databaseaccounts.h  databaseunreadfixer.cpp  databaseunreadfixer.h  dialogaddeditaccount.cpp  dialogaddeditaccount.h  dialogaddeditaccount.ui  dialogaddeditnewemail.cpp  dialogaddeditnewemail.h  dialogaddeditnewemail.ui  dialoglogoutput.cpp  dialoglogoutput.h  dialoglogoutput.ui  dialogsettings.cpp  dialogsettings.h  dialogsettings.ui  log.cpp  log.h  mailaccountdialog.cpp  mailaccountdialog.h  mailaccountdialog.ui  main.cpp  modelaccounttree.cpp  modelaccounttree.h  modelnewemails.cpp  modelnewemails.h  morkparser.cpp  (+35 more)
src/res/: birdtray.rc  com.ulduzsoft.Birdtray.appdata.xml  com.ulduzsoft.Birdtray.desktop  org.gyunaev.Birdtray.appdata.xml  org.gyunaev.Birdtray.desktop  translators.md
src/translations/: dynamic_cs.ts  dynamic_de.ts  dynamic_el.ts  dynamic_en.ts  dynamic_es.ts  dynamic_fr.ts  dynamic_hu.ts  dynamic_it.ts  dynamic_nl.ts  dynamic_pl.ts  dynamic_pt.ts  dynamic_ru.ts  dynamic_sv.ts  dynamic_tr.ts  dynamic_zh_cn.ts  installer_cs.ts  installer_de.ts  installer_el.ts  installer_en.ts  installer_es.ts  installer_fr.ts  installer_it.ts  installer_nl.ts  installer_pl.ts  installer_pt.ts  installer_ru.ts  installer_sv.ts  installer_tr.ts  installer_zh_cn.ts  main_cs.ts  main_de.ts  main_el.ts  main_en.ts  main_es.ts  main_fr.ts  main_it.ts  main_nl.ts  main_pl.ts  main_pt.ts  main_ru.ts  (+3 more)
tests/: .gitignore  CMakeLists.txt
tests/res/: 0_Unread_Trash.msf  0_Unread_Unified.msf  1_Unread_Filter.msf  1_Unread_Inbox_Duplicate_cells.msf  1_Unread_Inbox_Large.msf  1_Unread_Unified.msf  2_Unread_Inbox_Duplicate_cells.msf  2_Unread_Unified.msf  6_Unread_Inbox.msf
tests/src/: TestResources.cpp  TestResources.h  test_morkparser.cpp  test_utils.cpp
tools/: qt-installer-windows.qs
